# laDraw

./: .gitignore  LICENSE  README.md
backend/: ladraw.db  pyproject.toml
backend/app/: database.py  main.py  models.py  pdf_generator.py  routes.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: LogPanel.tsx  PlotCanvas.tsx  ProjectsModal.tsx  PropertiesPanel.tsx  Toolbar.tsx
