[project]
name = "ladraw-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "reportlab>=4.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = [.]
include = [app*]
